deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: dummy-web-server
  name: dummy-web-server
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      application: dummy-web-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        application: dummy-web-server
      name: dummy-web-server
    spec:
      containers:
       -  image: quay.io/iyurev/dummy-web-server:v0.2
          imagePullPolicy: Always
          name: dummy-web-server
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 64Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The web server's HTTP port.
  labels:
    application: dummy-web-server
  name: dummy-web-server
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    application: dummy-web-server
  sessionAffinity: None
  type: ClusterIP
