deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    application: dummy-web-server
  name: dummy-web-server
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentConfig: dummy-web-server
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        application: dummy-web-server
        deploymentConfig: dummy-web-server
      name: dummy-web-server
    spec:
      containers:
       -  image: quay.io/iyurev/dummy-web-server:v0.1
          imagePullPolicy: Always
          name: dummy-web-server
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 64Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
  test: false
  triggers:
    - type: ConfigChange

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The web server's HTTP port.
  labels:
    application: dummy-web-server
  name: dummy-web-server
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentConfig: dummy-web-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
