ingress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dummy-web-server
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dummy-web-server
spec:
  hosts:
    - "rhdg.apps.openshift-stage.mos.ru"
  gateways:
    - dummy-web-server
  http:
    - match:
         - uri:
             prefix: "/dws"
      route:
        - destination:
            host: dummy-web-server
            port:
              number: 8080
